4_AnalizadorSemantico/110118995.output
Estado 68 conflitos: 4 de redução/redução
Estado 108 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: program_start $end

    1 program_start: program

    2 program: program function
    3        | function

    4 function: type_struct ID '(' argList ')' '{' stmtList RETURN value ';' '}'

    5 valueList: valueList ',' value
    6          | value
    7          | %empty
    8          | error ')'

    9 value: NUM_INT
   10      | NUM_FLOAT
   11      | CARACTERE
   12      | ID
   13      | ID '.' FIRST

   14 type_struct: type_simple
   15            | QUEUE LT type_simple GT

   16 type_simple: VOID
   17            | FLOAT
   18            | INT
   19            | CHAR

   20 argList: argList ',' type_struct ID
   21        | type_struct ID
   22        | %empty
   23        | error '{'

   24 stmtList: stmtList stmt
   25         | %empty

   26 stmt: type_struct ID ';'
   27     | ID '(' valueList ')' ';'
   28     | ID '=' ID '(' valueList ')' ';'
   29     | IF '(' value compare_assignment value ')' block
   30     | IF '(' value compare_assignment value ')' block ELSE block
   31     | WHILE '(' value compare_assignment value ')' block
   32     | ID '=' assignment_expression ';'
   33     | type_struct_expression ';'

   34 block: stmt
   35      | '{' stmtList '}'

   36 compare_assignment: EQ
   37                   | NEQ
   38                   | LEQ
   39                   | GEQ
   40                   | LT
   41                   | GT

   42 assignment_expression: assignment_expression '+' term
   43                      | assignment_expression '-' term
   44                      | term
   45                      | error ';'

   46 term: term '*' factor
   47     | term '/' factor
   48     | factor
   49     | error ';'

   50 factor: value
   51       | '(' assignment_expression ')'

   52 type_struct_expression: ID '.' SETLAST ARROW value
   53                       | ID '=' ID '.' RMVFIRST


Terminais, com as regras onde eles aparecem

$end (0) 0
'(' (40) 4 27 28 29 30 31 51
')' (41) 4 8 27 28 29 30 31 51
'*' (42) 46
'+' (43) 42
',' (44) 5 20
'-' (45) 43
'.' (46) 13 52 53
'/' (47) 47
';' (59) 4 26 27 28 32 33 45 49
'=' (61) 28 32 53
'{' (123) 4 23 35
'}' (125) 4 35
error (256) 8 23 45 49
NUM_INT (258) 9
NUM_FLOAT (259) 10
CARACTERE (260) 11
ID (261) 4 12 13 20 21 26 27 28 32 52 53
VOID (262) 16
FLOAT (263) 17
INT (264) 18
CHAR (265) 19
EQ (266) 36
NEQ (267) 37
LEQ (268) 38
GEQ (269) 39
LT (270) 15 40
GT (271) 15 41
WHILE (272) 31
IF (273) 29 30
ELSE (274) 30
RETURN (275) 4
QUEUE (276) 15
FIRST (277) 13
ARROW (278) 52
SETLAST (279) 52
RMVFIRST (280) 53


Não terminais com as regras onde eles aparecem

$accept (38)
    à esquerda: 0
program_start (39)
    à esquerda: 1, à direita: 0
program (40)
    à esquerda: 2 3, à direita: 1 2
function (41)
    à esquerda: 4, à direita: 2 3
valueList (42)
    à esquerda: 5 6 7 8, à direita: 5 27 28
value (43)
    à esquerda: 9 10 11 12 13, à direita: 4 5 6 29 30 31 50 52
type_struct (44)
    à esquerda: 14 15, à direita: 4 20 21 26
type_simple (45)
    à esquerda: 16 17 18 19, à direita: 14 15
argList (46)
    à esquerda: 20 21 22 23, à direita: 4 20
stmtList (47)
    à esquerda: 24 25, à direita: 4 24 35
stmt (48)
    à esquerda: 26 27 28 29 30 31 32 33, à direita: 24 34
block (49)
    à esquerda: 34 35, à direita: 29 30 31
compare_assignment (50)
    à esquerda: 36 37 38 39 40 41, à direita: 29 30 31
assignment_expression (51)
    à esquerda: 42 43 44 45, à direita: 32 42 43 51
term (52)
    à esquerda: 46 47 48 49, à direita: 42 43 44 46 47
factor (53)
    à esquerda: 50 51, à direita: 46 47 48
type_struct_expression (54)
    à esquerda: 52 53, à direita: 33


Estado 0

    0 $accept: . program_start $end

    VOID   deslocar, e ir ao estado 1
    FLOAT  deslocar, e ir ao estado 2
    INT    deslocar, e ir ao estado 3
    CHAR   deslocar, e ir ao estado 4
    QUEUE  deslocar, e ir ao estado 5

    program_start  ir ao estado 6
    program        ir ao estado 7
    function       ir ao estado 8
    type_struct    ir ao estado 9
    type_simple    ir ao estado 10


Estado 1

   16 type_simple: VOID .

    $padrão  reduzir usando a regra 16 (type_simple)


Estado 2

   17 type_simple: FLOAT .

    $padrão  reduzir usando a regra 17 (type_simple)


Estado 3

   18 type_simple: INT .

    $padrão  reduzir usando a regra 18 (type_simple)


Estado 4

   19 type_simple: CHAR .

    $padrão  reduzir usando a regra 19 (type_simple)


Estado 5

   15 type_struct: QUEUE . LT type_simple GT

    LT  deslocar, e ir ao estado 11


Estado 6

    0 $accept: program_start . $end

    $end  deslocar, e ir ao estado 12


Estado 7

    1 program_start: program .
    2 program: program . function

    VOID   deslocar, e ir ao estado 1
    FLOAT  deslocar, e ir ao estado 2
    INT    deslocar, e ir ao estado 3
    CHAR   deslocar, e ir ao estado 4
    QUEUE  deslocar, e ir ao estado 5

    $padrão  reduzir usando a regra 1 (program_start)

    function     ir ao estado 13
    type_struct  ir ao estado 9
    type_simple  ir ao estado 10


Estado 8

    3 program: function .

    $padrão  reduzir usando a regra 3 (program)


Estado 9

    4 function: type_struct . ID '(' argList ')' '{' stmtList RETURN value ';' '}'

    ID  deslocar, e ir ao estado 14


Estado 10

   14 type_struct: type_simple .

    $padrão  reduzir usando a regra 14 (type_struct)


Estado 11

   15 type_struct: QUEUE LT . type_simple GT

    VOID   deslocar, e ir ao estado 1
    FLOAT  deslocar, e ir ao estado 2
    INT    deslocar, e ir ao estado 3
    CHAR   deslocar, e ir ao estado 4

    type_simple  ir ao estado 15


Estado 12

    0 $accept: program_start $end .

    $padrão  aceitar


Estado 13

    2 program: program function .

    $padrão  reduzir usando a regra 2 (program)


Estado 14

    4 function: type_struct ID . '(' argList ')' '{' stmtList RETURN value ';' '}'

    '('  deslocar, e ir ao estado 16


Estado 15

   15 type_struct: QUEUE LT type_simple . GT

    GT  deslocar, e ir ao estado 17


Estado 16

    4 function: type_struct ID '(' . argList ')' '{' stmtList RETURN value ';' '}'

    error  deslocar, e ir ao estado 18
    VOID   deslocar, e ir ao estado 1
    FLOAT  deslocar, e ir ao estado 2
    INT    deslocar, e ir ao estado 3
    CHAR   deslocar, e ir ao estado 4
    QUEUE  deslocar, e ir ao estado 5

    ')'  reduzir usando a regra 22 (argList)
    ','  reduzir usando a regra 22 (argList)

    type_struct  ir ao estado 19
    type_simple  ir ao estado 10
    argList      ir ao estado 20


Estado 17

   15 type_struct: QUEUE LT type_simple GT .

    $padrão  reduzir usando a regra 15 (type_struct)


Estado 18

   23 argList: error . '{'

    '{'  deslocar, e ir ao estado 21


Estado 19

   21 argList: type_struct . ID

    ID  deslocar, e ir ao estado 22


Estado 20

    4 function: type_struct ID '(' argList . ')' '{' stmtList RETURN value ';' '}'
   20 argList: argList . ',' type_struct ID

    ')'  deslocar, e ir ao estado 23
    ','  deslocar, e ir ao estado 24


Estado 21

   23 argList: error '{' .

    $padrão  reduzir usando a regra 23 (argList)


Estado 22

   21 argList: type_struct ID .

    $padrão  reduzir usando a regra 21 (argList)


Estado 23

    4 function: type_struct ID '(' argList ')' . '{' stmtList RETURN value ';' '}'

    '{'  deslocar, e ir ao estado 25


Estado 24

   20 argList: argList ',' . type_struct ID

    VOID   deslocar, e ir ao estado 1
    FLOAT  deslocar, e ir ao estado 2
    INT    deslocar, e ir ao estado 3
    CHAR   deslocar, e ir ao estado 4
    QUEUE  deslocar, e ir ao estado 5

    type_struct  ir ao estado 26
    type_simple  ir ao estado 10


Estado 25

    4 function: type_struct ID '(' argList ')' '{' . stmtList RETURN value ';' '}'

    $padrão  reduzir usando a regra 25 (stmtList)

    stmtList  ir ao estado 27


Estado 26

   20 argList: argList ',' type_struct . ID

    ID  deslocar, e ir ao estado 28


Estado 27

    4 function: type_struct ID '(' argList ')' '{' stmtList . RETURN value ';' '}'
   24 stmtList: stmtList . stmt

    ID      deslocar, e ir ao estado 29
    VOID    deslocar, e ir ao estado 1
    FLOAT   deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    CHAR    deslocar, e ir ao estado 4
    WHILE   deslocar, e ir ao estado 30
    IF      deslocar, e ir ao estado 31
    RETURN  deslocar, e ir ao estado 32
    QUEUE   deslocar, e ir ao estado 5

    type_struct             ir ao estado 33
    type_simple             ir ao estado 10
    stmt                    ir ao estado 34
    type_struct_expression  ir ao estado 35


Estado 28

   20 argList: argList ',' type_struct ID .

    $padrão  reduzir usando a regra 20 (argList)


Estado 29

   27 stmt: ID . '(' valueList ')' ';'
   28     | ID . '=' ID '(' valueList ')' ';'
   32     | ID . '=' assignment_expression ';'
   52 type_struct_expression: ID . '.' SETLAST ARROW value
   53                       | ID . '=' ID '.' RMVFIRST

    '('  deslocar, e ir ao estado 36
    '.'  deslocar, e ir ao estado 37
    '='  deslocar, e ir ao estado 38


Estado 30

   31 stmt: WHILE . '(' value compare_assignment value ')' block

    '('  deslocar, e ir ao estado 39


Estado 31

   29 stmt: IF . '(' value compare_assignment value ')' block
   30     | IF . '(' value compare_assignment value ')' block ELSE block

    '('  deslocar, e ir ao estado 40


Estado 32

    4 function: type_struct ID '(' argList ')' '{' stmtList RETURN . value ';' '}'

    NUM_INT    deslocar, e ir ao estado 41
    NUM_FLOAT  deslocar, e ir ao estado 42
    CARACTERE  deslocar, e ir ao estado 43
    ID         deslocar, e ir ao estado 44

    value  ir ao estado 45


Estado 33

   26 stmt: type_struct . ID ';'

    ID  deslocar, e ir ao estado 46


Estado 34

   24 stmtList: stmtList stmt .

    $padrão  reduzir usando a regra 24 (stmtList)


Estado 35

   33 stmt: type_struct_expression . ';'

    ';'  deslocar, e ir ao estado 47


Estado 36

   27 stmt: ID '(' . valueList ')' ';'

    error      deslocar, e ir ao estado 48
    NUM_INT    deslocar, e ir ao estado 41
    NUM_FLOAT  deslocar, e ir ao estado 42
    CARACTERE  deslocar, e ir ao estado 43
    ID         deslocar, e ir ao estado 44

    ')'  reduzir usando a regra 7 (valueList)
    ','  reduzir usando a regra 7 (valueList)

    valueList  ir ao estado 49
    value      ir ao estado 50


Estado 37

   52 type_struct_expression: ID '.' . SETLAST ARROW value

    SETLAST  deslocar, e ir ao estado 51


Estado 38

   28 stmt: ID '=' . ID '(' valueList ')' ';'
   32     | ID '=' . assignment_expression ';'
   53 type_struct_expression: ID '=' . ID '.' RMVFIRST

    error      deslocar, e ir ao estado 52
    NUM_INT    deslocar, e ir ao estado 41
    NUM_FLOAT  deslocar, e ir ao estado 42
    CARACTERE  deslocar, e ir ao estado 43
    ID         deslocar, e ir ao estado 53
    '('        deslocar, e ir ao estado 54

    value                  ir ao estado 55
    assignment_expression  ir ao estado 56
    term                   ir ao estado 57
    factor                 ir ao estado 58


Estado 39

   31 stmt: WHILE '(' . value compare_assignment value ')' block

    NUM_INT    deslocar, e ir ao estado 41
    NUM_FLOAT  deslocar, e ir ao estado 42
    CARACTERE  deslocar, e ir ao estado 43
    ID         deslocar, e ir ao estado 44

    value  ir ao estado 59


Estado 40

   29 stmt: IF '(' . value compare_assignment value ')' block
   30     | IF '(' . value compare_assignment value ')' block ELSE block

    NUM_INT    deslocar, e ir ao estado 41
    NUM_FLOAT  deslocar, e ir ao estado 42
    CARACTERE  deslocar, e ir ao estado 43
    ID         deslocar, e ir ao estado 44

    value  ir ao estado 60


Estado 41

    9 value: NUM_INT .

    $padrão  reduzir usando a regra 9 (value)


Estado 42

   10 value: NUM_FLOAT .

    $padrão  reduzir usando a regra 10 (value)


Estado 43

   11 value: CARACTERE .

    $padrão  reduzir usando a regra 11 (value)


Estado 44

   12 value: ID .
   13      | ID . '.' FIRST

    '.'  deslocar, e ir ao estado 61

    $padrão  reduzir usando a regra 12 (value)


Estado 45

    4 function: type_struct ID '(' argList ')' '{' stmtList RETURN value . ';' '}'

    ';'  deslocar, e ir ao estado 62


Estado 46

   26 stmt: type_struct ID . ';'

    ';'  deslocar, e ir ao estado 63


Estado 47

   33 stmt: type_struct_expression ';' .

    $padrão  reduzir usando a regra 33 (stmt)


Estado 48

    8 valueList: error . ')'

    ')'  deslocar, e ir ao estado 64


Estado 49

    5 valueList: valueList . ',' value
   27 stmt: ID '(' valueList . ')' ';'

    ')'  deslocar, e ir ao estado 65
    ','  deslocar, e ir ao estado 66


Estado 50

    6 valueList: value .

    $padrão  reduzir usando a regra 6 (valueList)


Estado 51

   52 type_struct_expression: ID '.' SETLAST . ARROW value

    ARROW  deslocar, e ir ao estado 67


Estado 52

   45 assignment_expression: error . ';'
   49 term: error . ';'

    ';'  deslocar, e ir ao estado 68


Estado 53

   12 value: ID .
   13      | ID . '.' FIRST
   28 stmt: ID '=' ID . '(' valueList ')' ';'
   53 type_struct_expression: ID '=' ID . '.' RMVFIRST

    '('  deslocar, e ir ao estado 69
    '.'  deslocar, e ir ao estado 70

    $padrão  reduzir usando a regra 12 (value)


Estado 54

   51 factor: '(' . assignment_expression ')'

    error      deslocar, e ir ao estado 52
    NUM_INT    deslocar, e ir ao estado 41
    NUM_FLOAT  deslocar, e ir ao estado 42
    CARACTERE  deslocar, e ir ao estado 43
    ID         deslocar, e ir ao estado 44
    '('        deslocar, e ir ao estado 54

    value                  ir ao estado 55
    assignment_expression  ir ao estado 71
    term                   ir ao estado 57
    factor                 ir ao estado 58


Estado 55

   50 factor: value .

    $padrão  reduzir usando a regra 50 (factor)


Estado 56

   32 stmt: ID '=' assignment_expression . ';'
   42 assignment_expression: assignment_expression . '+' term
   43                      | assignment_expression . '-' term

    ';'  deslocar, e ir ao estado 72
    '+'  deslocar, e ir ao estado 73
    '-'  deslocar, e ir ao estado 74


Estado 57

   44 assignment_expression: term .
   46 term: term . '*' factor
   47     | term . '/' factor

    '*'  deslocar, e ir ao estado 75
    '/'  deslocar, e ir ao estado 76

    $padrão  reduzir usando a regra 44 (assignment_expression)


Estado 58

   48 term: factor .

    $padrão  reduzir usando a regra 48 (term)


Estado 59

   31 stmt: WHILE '(' value . compare_assignment value ')' block

    EQ   deslocar, e ir ao estado 77
    NEQ  deslocar, e ir ao estado 78
    LEQ  deslocar, e ir ao estado 79
    GEQ  deslocar, e ir ao estado 80
    LT   deslocar, e ir ao estado 81
    GT   deslocar, e ir ao estado 82

    compare_assignment  ir ao estado 83


Estado 60

   29 stmt: IF '(' value . compare_assignment value ')' block
   30     | IF '(' value . compare_assignment value ')' block ELSE block

    EQ   deslocar, e ir ao estado 77
    NEQ  deslocar, e ir ao estado 78
    LEQ  deslocar, e ir ao estado 79
    GEQ  deslocar, e ir ao estado 80
    LT   deslocar, e ir ao estado 81
    GT   deslocar, e ir ao estado 82

    compare_assignment  ir ao estado 84


Estado 61

   13 value: ID '.' . FIRST

    FIRST  deslocar, e ir ao estado 85


Estado 62

    4 function: type_struct ID '(' argList ')' '{' stmtList RETURN value ';' . '}'

    '}'  deslocar, e ir ao estado 86


Estado 63

   26 stmt: type_struct ID ';' .

    $padrão  reduzir usando a regra 26 (stmt)


Estado 64

    8 valueList: error ')' .

    $padrão  reduzir usando a regra 8 (valueList)


Estado 65

   27 stmt: ID '(' valueList ')' . ';'

    ';'  deslocar, e ir ao estado 87


Estado 66

    5 valueList: valueList ',' . value

    NUM_INT    deslocar, e ir ao estado 41
    NUM_FLOAT  deslocar, e ir ao estado 42
    CARACTERE  deslocar, e ir ao estado 43
    ID         deslocar, e ir ao estado 44

    value  ir ao estado 88


Estado 67

   52 type_struct_expression: ID '.' SETLAST ARROW . value

    NUM_INT    deslocar, e ir ao estado 41
    NUM_FLOAT  deslocar, e ir ao estado 42
    CARACTERE  deslocar, e ir ao estado 43
    ID         deslocar, e ir ao estado 44

    value  ir ao estado 89


Estado 68

   45 assignment_expression: error ';' .
   49 term: error ';' .

    ')'       reduzir usando a regra 45 (assignment_expression)
    ')'       [reduzir usando a regra 49 (term)]
    ';'       reduzir usando a regra 45 (assignment_expression)
    ';'       [reduzir usando a regra 49 (term)]
    '+'       reduzir usando a regra 45 (assignment_expression)
    '+'       [reduzir usando a regra 49 (term)]
    '-'       reduzir usando a regra 45 (assignment_expression)
    '-'       [reduzir usando a regra 49 (term)]
    '*'       reduzir usando a regra 49 (term)
    '/'       reduzir usando a regra 49 (term)
    $padrão  reduzir usando a regra 45 (assignment_expression)


Estado 69

   28 stmt: ID '=' ID '(' . valueList ')' ';'

    error      deslocar, e ir ao estado 48
    NUM_INT    deslocar, e ir ao estado 41
    NUM_FLOAT  deslocar, e ir ao estado 42
    CARACTERE  deslocar, e ir ao estado 43
    ID         deslocar, e ir ao estado 44

    ')'  reduzir usando a regra 7 (valueList)
    ','  reduzir usando a regra 7 (valueList)

    valueList  ir ao estado 90
    value      ir ao estado 50


Estado 70

   13 value: ID '.' . FIRST
   53 type_struct_expression: ID '=' ID '.' . RMVFIRST

    FIRST     deslocar, e ir ao estado 85
    RMVFIRST  deslocar, e ir ao estado 91


Estado 71

   42 assignment_expression: assignment_expression . '+' term
   43                      | assignment_expression . '-' term
   51 factor: '(' assignment_expression . ')'

    ')'  deslocar, e ir ao estado 92
    '+'  deslocar, e ir ao estado 73
    '-'  deslocar, e ir ao estado 74


Estado 72

   32 stmt: ID '=' assignment_expression ';' .

    $padrão  reduzir usando a regra 32 (stmt)


Estado 73

   42 assignment_expression: assignment_expression '+' . term

    error      deslocar, e ir ao estado 93
    NUM_INT    deslocar, e ir ao estado 41
    NUM_FLOAT  deslocar, e ir ao estado 42
    CARACTERE  deslocar, e ir ao estado 43
    ID         deslocar, e ir ao estado 44
    '('        deslocar, e ir ao estado 54

    value   ir ao estado 55
    term    ir ao estado 94
    factor  ir ao estado 58


Estado 74

   43 assignment_expression: assignment_expression '-' . term

    error      deslocar, e ir ao estado 93
    NUM_INT    deslocar, e ir ao estado 41
    NUM_FLOAT  deslocar, e ir ao estado 42
    CARACTERE  deslocar, e ir ao estado 43
    ID         deslocar, e ir ao estado 44
    '('        deslocar, e ir ao estado 54

    value   ir ao estado 55
    term    ir ao estado 95
    factor  ir ao estado 58


Estado 75

   46 term: term '*' . factor

    NUM_INT    deslocar, e ir ao estado 41
    NUM_FLOAT  deslocar, e ir ao estado 42
    CARACTERE  deslocar, e ir ao estado 43
    ID         deslocar, e ir ao estado 44
    '('        deslocar, e ir ao estado 54

    value   ir ao estado 55
    factor  ir ao estado 96


Estado 76

   47 term: term '/' . factor

    NUM_INT    deslocar, e ir ao estado 41
    NUM_FLOAT  deslocar, e ir ao estado 42
    CARACTERE  deslocar, e ir ao estado 43
    ID         deslocar, e ir ao estado 44
    '('        deslocar, e ir ao estado 54

    value   ir ao estado 55
    factor  ir ao estado 97


Estado 77

   36 compare_assignment: EQ .

    $padrão  reduzir usando a regra 36 (compare_assignment)


Estado 78

   37 compare_assignment: NEQ .

    $padrão  reduzir usando a regra 37 (compare_assignment)


Estado 79

   38 compare_assignment: LEQ .

    $padrão  reduzir usando a regra 38 (compare_assignment)


Estado 80

   39 compare_assignment: GEQ .

    $padrão  reduzir usando a regra 39 (compare_assignment)


Estado 81

   40 compare_assignment: LT .

    $padrão  reduzir usando a regra 40 (compare_assignment)


Estado 82

   41 compare_assignment: GT .

    $padrão  reduzir usando a regra 41 (compare_assignment)


Estado 83

   31 stmt: WHILE '(' value compare_assignment . value ')' block

    NUM_INT    deslocar, e ir ao estado 41
    NUM_FLOAT  deslocar, e ir ao estado 42
    CARACTERE  deslocar, e ir ao estado 43
    ID         deslocar, e ir ao estado 44

    value  ir ao estado 98


Estado 84

   29 stmt: IF '(' value compare_assignment . value ')' block
   30     | IF '(' value compare_assignment . value ')' block ELSE block

    NUM_INT    deslocar, e ir ao estado 41
    NUM_FLOAT  deslocar, e ir ao estado 42
    CARACTERE  deslocar, e ir ao estado 43
    ID         deslocar, e ir ao estado 44

    value  ir ao estado 99


Estado 85

   13 value: ID '.' FIRST .

    $padrão  reduzir usando a regra 13 (value)


Estado 86

    4 function: type_struct ID '(' argList ')' '{' stmtList RETURN value ';' '}' .

    $padrão  reduzir usando a regra 4 (function)


Estado 87

   27 stmt: ID '(' valueList ')' ';' .

    $padrão  reduzir usando a regra 27 (stmt)


Estado 88

    5 valueList: valueList ',' value .

    $padrão  reduzir usando a regra 5 (valueList)


Estado 89

   52 type_struct_expression: ID '.' SETLAST ARROW value .

    $padrão  reduzir usando a regra 52 (type_struct_expression)


Estado 90

    5 valueList: valueList . ',' value
   28 stmt: ID '=' ID '(' valueList . ')' ';'

    ')'  deslocar, e ir ao estado 100
    ','  deslocar, e ir ao estado 66


Estado 91

   53 type_struct_expression: ID '=' ID '.' RMVFIRST .

    $padrão  reduzir usando a regra 53 (type_struct_expression)


Estado 92

   51 factor: '(' assignment_expression ')' .

    $padrão  reduzir usando a regra 51 (factor)


Estado 93

   49 term: error . ';'

    ';'  deslocar, e ir ao estado 101


Estado 94

   42 assignment_expression: assignment_expression '+' term .
   46 term: term . '*' factor
   47     | term . '/' factor

    '*'  deslocar, e ir ao estado 75
    '/'  deslocar, e ir ao estado 76

    $padrão  reduzir usando a regra 42 (assignment_expression)


Estado 95

   43 assignment_expression: assignment_expression '-' term .
   46 term: term . '*' factor
   47     | term . '/' factor

    '*'  deslocar, e ir ao estado 75
    '/'  deslocar, e ir ao estado 76

    $padrão  reduzir usando a regra 43 (assignment_expression)


Estado 96

   46 term: term '*' factor .

    $padrão  reduzir usando a regra 46 (term)


Estado 97

   47 term: term '/' factor .

    $padrão  reduzir usando a regra 47 (term)


Estado 98

   31 stmt: WHILE '(' value compare_assignment value . ')' block

    ')'  deslocar, e ir ao estado 102


Estado 99

   29 stmt: IF '(' value compare_assignment value . ')' block
   30     | IF '(' value compare_assignment value . ')' block ELSE block

    ')'  deslocar, e ir ao estado 103


Estado 100

   28 stmt: ID '=' ID '(' valueList ')' . ';'

    ';'  deslocar, e ir ao estado 104


Estado 101

   49 term: error ';' .

    $padrão  reduzir usando a regra 49 (term)


Estado 102

   31 stmt: WHILE '(' value compare_assignment value ')' . block

    ID     deslocar, e ir ao estado 29
    VOID   deslocar, e ir ao estado 1
    FLOAT  deslocar, e ir ao estado 2
    INT    deslocar, e ir ao estado 3
    CHAR   deslocar, e ir ao estado 4
    WHILE  deslocar, e ir ao estado 30
    IF     deslocar, e ir ao estado 31
    QUEUE  deslocar, e ir ao estado 5
    '{'    deslocar, e ir ao estado 105

    type_struct             ir ao estado 33
    type_simple             ir ao estado 10
    stmt                    ir ao estado 106
    block                   ir ao estado 107
    type_struct_expression  ir ao estado 35


Estado 103

   29 stmt: IF '(' value compare_assignment value ')' . block
   30     | IF '(' value compare_assignment value ')' . block ELSE block

    ID     deslocar, e ir ao estado 29
    VOID   deslocar, e ir ao estado 1
    FLOAT  deslocar, e ir ao estado 2
    INT    deslocar, e ir ao estado 3
    CHAR   deslocar, e ir ao estado 4
    WHILE  deslocar, e ir ao estado 30
    IF     deslocar, e ir ao estado 31
    QUEUE  deslocar, e ir ao estado 5
    '{'    deslocar, e ir ao estado 105

    type_struct             ir ao estado 33
    type_simple             ir ao estado 10
    stmt                    ir ao estado 106
    block                   ir ao estado 108
    type_struct_expression  ir ao estado 35


Estado 104

   28 stmt: ID '=' ID '(' valueList ')' ';' .

    $padrão  reduzir usando a regra 28 (stmt)


Estado 105

   35 block: '{' . stmtList '}'

    $padrão  reduzir usando a regra 25 (stmtList)

    stmtList  ir ao estado 109


Estado 106

   34 block: stmt .

    $padrão  reduzir usando a regra 34 (block)


Estado 107

   31 stmt: WHILE '(' value compare_assignment value ')' block .

    $padrão  reduzir usando a regra 31 (stmt)


Estado 108

   29 stmt: IF '(' value compare_assignment value ')' block .
   30     | IF '(' value compare_assignment value ')' block . ELSE block

    ELSE  deslocar, e ir ao estado 110

    ELSE      [reduzir usando a regra 29 (stmt)]
    $padrão  reduzir usando a regra 29 (stmt)


Estado 109

   24 stmtList: stmtList . stmt
   35 block: '{' stmtList . '}'

    ID     deslocar, e ir ao estado 29
    VOID   deslocar, e ir ao estado 1
    FLOAT  deslocar, e ir ao estado 2
    INT    deslocar, e ir ao estado 3
    CHAR   deslocar, e ir ao estado 4
    WHILE  deslocar, e ir ao estado 30
    IF     deslocar, e ir ao estado 31
    QUEUE  deslocar, e ir ao estado 5
    '}'    deslocar, e ir ao estado 111

    type_struct             ir ao estado 33
    type_simple             ir ao estado 10
    stmt                    ir ao estado 34
    type_struct_expression  ir ao estado 35


Estado 110

   30 stmt: IF '(' value compare_assignment value ')' block ELSE . block

    ID     deslocar, e ir ao estado 29
    VOID   deslocar, e ir ao estado 1
    FLOAT  deslocar, e ir ao estado 2
    INT    deslocar, e ir ao estado 3
    CHAR   deslocar, e ir ao estado 4
    WHILE  deslocar, e ir ao estado 30
    IF     deslocar, e ir ao estado 31
    QUEUE  deslocar, e ir ao estado 5
    '{'    deslocar, e ir ao estado 105

    type_struct             ir ao estado 33
    type_simple             ir ao estado 10
    stmt                    ir ao estado 106
    block                   ir ao estado 112
    type_struct_expression  ir ao estado 35


Estado 111

   35 block: '{' stmtList '}' .

    $padrão  reduzir usando a regra 35 (block)


Estado 112

   30 stmt: IF '(' value compare_assignment value ')' block ELSE block .

    $padrão  reduzir usando a regra 30 (stmt)
